--- a/index.css
+++ b/index.css
@@ -4,6 +4,12 @@ html,body{
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -moz-box-sizing: border-box;
+    font-family: 'Varela Round', 'Nanum Gothic Coding', sans-serif;
+}
+@font-face {
+    font-family: 'Nanum';
+    src: url(./font/Nanum_Gothic_Coding/NanumGothicCoding-Regular.ttf);
+    unicode-range:U+AC00-D7A3;
 }
 li{list-style: none;}
 header{
@@ -44,7 +50,9 @@ header{
     opacity: 1;
     transition: opacity .4s ease-out;
 }
-section{
+section:first-child,
+section:nth-child(2),
+section:last-child{
     width: 100vw;
     height: 100vh;}
 .title-circle,
@@ -61,7 +69,7 @@ section{
     height: 600px;
     background-image: linear-gradient(45deg,#f94892 40%,#ff742f,#fff980);
     filter: blur(160px);
-    top: 35%;
+    top: 45%;
     left: 0%;
     z-index: -1;
 }
@@ -70,8 +78,8 @@ section{
     height: 250px;
     background:#c539b4;
     filter: blur(150px);
-    top:70%;
-    left: 37%;
+    top:73%;
+    left: 33%;
 }
 .title-circle3{
     width: 350px;
@@ -117,7 +125,7 @@ section{
     font-size: 16px;
 }
 .title>h1{
-    font-size: 60px;
+    font-size: 70px;
     letter-spacing: 5px;
 }
 .key{
@@ -130,17 +138,20 @@ section{
     transform: translateY(-50%);
     right:25%;
 }
-.icon-scroll,
-.icon-scroll:before{
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: 50px;}
+.key>p{
+    font-weight: 100;
+}
 .icon-scroll{
   width: 40px;
   height: 70px;
   box-shadow: inset 0 0 0 1px #585858;
-  border-radius: 25px
+  border-radius: 25px;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%,0);
+  bottom: 50px;
+  display: flex;
+  justify-content: center;
 }
 .icon-scroll::before{
     content: "";
@@ -150,10 +161,13 @@ section{
     border-radius: 4px;
     margin-top: 11px;
     animation: scroll 2s infinite;
+    position: absolute;
 }
 @keyframes scroll{
-    0%{opacity: 1;}
-    100%{opacity: 0;}
+    0%{opacity: 1;
+        transform: translateY(0);}
+    100%{opacity: 0;
+        transform: translateY(25px);}
 }
 .icon-scroll::after{
     content: "";
@@ -164,9 +178,36 @@ section{
     border-right: 1px solid #585858;
     transform: rotate(135deg); 
     margin-top: 65px;
-    margin-left: 10px;
 }
 .about{position: relative;}
+.about-wrap{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 1000px;
+    display: flex;
+    align-items: center;
+    /* animation: opacity 2s ease-in-out; */
+}
+.profile{
+    width: 300px;
+    height: 400px;
+    border-radius: 30px;
+    background-image: radial-gradient(circle at center,transparent 45%,#fff);
+    margin-right: 125px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    left: -100px;
+}
+@keyframes opacity{
+    0%{top: 0%;
+        opacity: 0;}
+    100%{top:50%;
+        opacity: 1;}
+}
 .profile-circle{
     width: 150px;
     height: 150px;
@@ -175,7 +216,7 @@ section{
     bottom: 23%;
     left: 32%;
     background-image: linear-gradient(225deg,#abc9ff 20%,#c539b4,#fff980);
-    filter:blur(50px);
+    filter:blur(60px);
     z-index: -20;
 }
 .list-circle{
@@ -188,32 +229,6 @@ section{
     right: -200px;
     background-color: #abc9ff;
     filter: blur(100px);
-}
-.about-wrap{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: 1000px;
-    display: flex;
-    align-items: center;
-    animation: opacity 2s ease-in-out;
-}
-.profile{
-    width: 300px;
-    height: 400px;
-    border-radius: 30px;
-    background-image: radial-gradient(circle at center,transparent 45%,#fff);
-    margin-right: 100px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    left: -100px;
-}
-@keyframes opacity{
-    0%{opacity: 0;}
-    100%{opacity: 1;}
 }
 .profile>img{
     width: 200px;
@@ -250,7 +265,16 @@ section{
     width: 40px;
     height: 40px;
 }
-.portfolio{background-color: orange;}
+.portfolio{
+    width: 100vw;
+    height: auto;}
+.portfolio>article{
+    height: 100vh;
+}
+.pc-image{width: 850px;}
+.pc-image>img{width: 100%;}
+.mobile-image{width: 600px;}
+.mobile-image>img{width: 100%;}
 .contact{position: relative;}
 .contact-circle{
     width: 300px;
