--- a/index.css
+++ b/index.css
@@ -4,13 +4,12 @@ html,body{
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -moz-box-sizing: border-box;
-    font-family: 'Varela Round', 'Nanum Gothic Coding', sans-serif;
+    font-family: 'NSR';
     overflow-x: hidden;
 }
 @font-face {
-    font-family: 'Nanum';
-    src: url(./font/Nanum_Gothic_Coding/NanumGothicCoding-Regular.ttf);
-    unicode-range:U+AC00-D7A3;
+    font-family: 'NSR';
+    src: url(./font/NanumSquareRoundR.ttf);
 }
 li{list-style: none;}
 a{text-decoration: none;}
@@ -127,14 +126,12 @@ section:last-child{
     font-size: 16px;
 }
 .title>h1{
-    font-size: 70px;
+    font-size: 75px;
     letter-spacing: 5px;
 }
 .key{
     text-transform: capitalize;
-    width: 300px;
-    height: 100px;
-    border: 1px dashed red;
+    width: auto;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -252,11 +249,22 @@ section:last-child{
 .about-list>li>div{
     display: inline-block;
 }
+.about-list>li>.date{
+    padding-left: 10px;
+}
 .about-list>li>.contents{
     margin-left: 30px;
 }
 .about-list>li>h3{
     margin-bottom: 5px;
+}
+.about-list>li>h3::before{
+    content: "";
+    display: inline-block;
+    width: 4px;
+    height: 15px;
+    background-color: #e188ad;
+    margin-right: 5px;
 }
 .skills>div{
     display: flex;
@@ -264,12 +272,257 @@ section:last-child{
 .skills>div>img{
     margin:5px;
     width: 40px;
-    height: 40px;
+    height: 40px;}
+.portfolio{
+    width: 100vw;
+    height: auto;
 }
+.sign{
+    width: 100%;
+    height: 100vh;
+    position: relative;
+}
+.sign-circle1,
+.sign-circle2,
+.sign-circle3{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    filter: blur(120px);
+}
+.sign-circle1{
+    background-color: #b7b7b7;
+}
+.sign-circle2{
+    background-color: #5ea378;
+}
+.sign-circle3{
+    background-color: #bdd3fd;
+}
+.portfolio-title{
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.portfolio-title>h1{
+    font-size: 75px;
+}
+.sign>.introduce{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 90px;
+    text-align: center;}
+.number{
+    position: absolute;
+    top: 50%;
+    left: 25px;
+    text-align: center;
+    transform: rotate(-90deg);}
+.number>span{
+    font-size: 25px;
+    font-weight: 800;
+    color: #e188ad;
+}
+.arcteryx>.wrap{
+    width: 1200px;
+    height: 100vh;
+    margin: 0 auto;
+    position: relative;
+    overflow: hidden;
+}
+.arcteryx>.wrap>img{
+    width: 200px;
+    position: absolute;
+}
+
+.arcteryx>.wrap>img:nth-child(2){
+    top: 100px;
+    right: 370px;
+}
+.arcteryx>.wrap>img:last-child{
+   right: 120px;
+   bottom: 100px;
+}
+.arcteryx>.wrap>.site-content{
+    text-align: center;
+    width: 500px;
+    display: inline-block;
+    margin-top: 44px;
+}
+.mobile-image>img{
+    width: 500px;
+}
+#clickBtn{
+    padding: 12px 18px;
+    border-radius: 30px;
+    color: #000;
+    border: 1px solid red;
+}
+.nonfiction>.wrap{
+    width: 1200px;
+    height: 100vh;
+    margin: 0 auto;
+    position: relative;
+    overflow: hidden;
+}
+.nonfiction>.wrap>.site-image1{
+    width: 326px;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.nonfiction>.wrap>.site-image2{
+    width: 150px;
+    position: absolute;
+    bottom: -677px;
+    left: 400px;
+}
+
+.nonfiction>.wrap>.site-content{
+    position: relative;
+    margin-left:525px ;
+    text-align: center;
+    margin-top: 44px;
+    width: 800px;
+}
+.site-circle2{
+    width: 280px;
+    height: 280px;
+    border-radius: 50%;
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    z-index: -1;
+    background-color:#5ea378 ;
+    filter: blur(100px);
+}
+.nonfiction>.wrap>.site-content>.pcMobile-image>img{
+    width: 700px;
+}
+/* 스토리보드 모달창 */
+.hidden{
+    display: none;
+    visibility: hidden;}
+.button{
+    vertical-align: middle;
+    cursor: pointer;
+}
+.box-modal{
+    position: fixed;
+    width: 300px;
+    height: 300px;
+    top: 50%;
+    left: 50%;
+    overflow-y: scroll;
+    border: 1px solid #386980;
+    visibility: collapse;
+    transform: translate(-50%,-50%);
+    transition: all .2s ease;
+    opacity: .5;
+}
+.box-modal:hover{
+    opacity: 1;
+}
+.closer{
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    top: 0;
+    right: 0;
+    text-align: center;
+    line-height: 30px;
+    font-size: 16px;
+    cursor: pointer;
+}
+input#modal[type=checkbox]:checked ~ .box-modal{
+    visibility: visible;
+    transform: scale(1,1);
+}
+/* }
 .portfolio{
     width: 100vw;
     height: auto;}
+.Arcteryx-sign,
+.nonfiction-sign,
+.national-sign{
+    width: 100%;
+    height: 100vh;
+    position: relative;
+}
+.sign-circle{
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    background-image: radial-gradient(circle at center,#b4b3b3 40%,#fff);
+    filter:blur(120px);
+}
+.sign-circle2{
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    background-image: radial-gradient(circle at center,#5ea378 40%,#fff);
+    filter:blur(120px);
+}
+.sign-circle3{
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    background-image: radial-gradient(circle at center,#bdd3fd 40%,#fff);
+    filter:blur(120px);
+}
+.Arcteryx-sign>.portfolio-title,
+.nonfiction-sign>.portfolio-title,
+.national-sign>.portfolio-title{
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.portfolio-title>h1{
+    font-size: 75px;
+}
+.Arcteryx-sign>.introduce,
+.nonfiction-sign>.introduce,
+.national-sign>.introduce{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 90px;
+    text-align: center;}
+.number{
+    position: absolute;
+    top: 50%;
+    left: 25px;
+    text-align: center;
+    transform: rotate(-90deg);}
+.number>span{
+    font-size: 25px;
+    font-weight: 800;
+    color: #e188ad;
+}
 .portfolio>article{
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -279,8 +532,9 @@ section:last-child{
     width: 100vw;
     display: flex;
     justify-content: center;}
-.pc>div{
-    flex: 1;
+.nonfiction>.pc>div:first-child,
+.national>.pc>div:first-child{
+    flex: 2;
 }
 .pc>div:nth-child(2){
     display: flex;
@@ -289,28 +543,30 @@ section:last-child{
     align-items: center;
     position: relative;
 }
-.pc>div:nth-child(2)::before{
-    content: "";
-    position: absolute;
-    left: 0;
-    width: 1px;
-    height: 430px;
-    background-color: rgb(214, 214, 214);
+.site-page{
+    display: flex;
 }
-.site-pc-page{display: flex;
-    justify-content: center;}
-.site-pc-page>img{width: 400px;}
-.national .site-pc-page>img{
+.site-page>img:first-child{
+    width: 400px;
+}
+.mbsite-page>img{
+    width: 200px;
+}
+.mbsite-page>img:first-child{
+    margin-right: 30px;
+}
+.national .site-page>img{
     width: 800px;
 }
+
 .site-circle{
     width: 280px;
     height: 280px;
     border-radius: 50%;
     position: absolute;
     z-index: -1;
-    background-color:#f94892 ;
-    filter: blur(150px);
+    background-color:#5ea378 ;
+    filter: blur(130px);
 }
 .nat-circle{
     width: 280px;
@@ -318,14 +574,20 @@ section:last-child{
     border-radius: 50%;
     position: absolute;
     z-index: -1;
-    background-color:#bdd3fd ;
-    filter: blur(150px);
+    background-color:#aec8f6 ;
+    filter: blur(130px);
 }
-.pc-image{width: 850px;}
+.pc-image{width: 750px;}
 .pc-image>img{width: 100%;}
+.mobile-image>img{width: 400px;}
 
-.mobile-image{width: 600px;}
-.mobile-image>img{width: 100%;}
+
+.portfolio>article #clickBtn{
+    padding: 10px 12px;
+    border: 1px solid red;
+    color: #000;} */
+
+
 
 
 .contact{position: relative;}
