--- a/index.css
+++ b/index.css
@@ -7,6 +7,17 @@ html,body{
     font-family: 'NSR';
     overflow-x: hidden;
 }
+::-webkit-scrollbar {
+    width: 10px;  /* 스크롤바의 너비 */
+}
+::-webkit-scrollbar-thumb {
+    height: 20%; /* 스크롤바의 길이 */
+    background: #e188ad; /* 스크롤바의 색상 */
+    border-radius: 10px;
+}
+::-webkit-scrollbar-track {
+    background: transparent;  /*스크롤바 뒷 배경 색상*/
+}
 @font-face {
     font-family: 'NSR';
     src: url(./font/NanumSquareRoundR.ttf);
@@ -16,13 +27,16 @@ a{text-decoration: none;}
 header{
     width: 40%;
     position: fixed;
-    top: 35px;
-    right: 0;
+    top: 30px;
+    right: 10px;
     z-index: 100;
 }
 .menu-list{
     display: flex;
     flex-direction: row;
+    background-color: rgba(255, 255, 255, .5);
+    border-radius: 30px;
+    padding: 15px 0;
 }
 .menu-item{
     font-weight: 700;
@@ -32,25 +46,6 @@ header{
     cursor: pointer;
     position: relative;
     text-align: center;}
-.menu-item::before{
-    content:"";
-    display: block;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background-color: #f94892;
-    filter: blur(15px);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    z-index: -1;
-    opacity: 0;
-}
-.menu-item:hover.menu-item::before{
-    opacity: 1;
-    transition: opacity .4s ease-out;
-}
 section:first-child,
 section:nth-child(2),
 section:last-child{
@@ -113,15 +108,18 @@ section:last-child{
     background-image: radial-gradient(circle at center,transparent 45%,#fff);
     z-index: -1;
 }
-.title{
+.home-wrap{
+    width: 1200px;
+    height: 100vh;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+}
+.title{    
+    flex: 1 1;
     text-transform: capitalize;
     font-size: 30px;
-    text-align: left;
-    position: absolute;
-    top: 50%;
-    left: 20%;
-    transform: translateY(-50%);
-    z-index: 1;}
+    text-align: left;}
 .title>h4{
     font-size: 16px;
 }
@@ -130,12 +128,9 @@ section:last-child{
     letter-spacing: 5px;
 }
 .key{
+    flex: 1 1;
     text-transform: capitalize;
     width: auto;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right:25%;
 }
 .key>p{
     font-weight: 100;
@@ -314,6 +309,8 @@ section:last-child{
     font-size: 75px;
 }
 .sign>.introduce{
+    width: 600px;
+    border: 1px solid red;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
@@ -341,7 +338,6 @@ section:last-child{
     width: 200px;
     position: absolute;
 }
-
 .arcteryx>.wrap>img:nth-child(2){
     top: 100px;
     right: 370px;
@@ -360,10 +356,20 @@ section:last-child{
     width: 500px;
 }
 #clickBtn{
+    display: inline-block;
+    width: 120px;
     padding: 12px 18px;
     border-radius: 30px;
-    color: #000;
-    border: 1px solid red;
+    color: #fff;
+    transition: all .5s;
+    background-size: 200% auto;
+    background-image: linear-gradient(to right, #fbc2eb 0%, #a6c1ee 51%, #fbc2eb 100%);
+    box-shadow: 0 0 25px #e188ad;
+    background-color: #e188ad;
+    margin-top: 15px;
+}
+#clickBtn:hover{
+    background-position: right center;
 }
 .nonfiction>.wrap{
     width: 1200px;
@@ -384,7 +390,6 @@ section:last-child{
     bottom: -677px;
     left: 400px;
 }
-
 .nonfiction>.wrap>.site-content{
     position: relative;
     margin-left:525px ;
@@ -407,6 +412,32 @@ section:last-child{
 .nonfiction>.wrap>.site-content>.pcMobile-image>img{
     width: 700px;
 }
+.national>.wrap{
+    width: 1200px;
+    height: 100vh;
+    margin: 0 auto;
+    position: relative;
+    overflow: hidden;
+    border: 1px solid red;
+}
+
+.national>.wrap>.pc-image{
+    width: 640px;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.national>.wrap>.mb-image{
+    width: 150px;
+    position: absolute;
+}
+.national>.wrap>.site-content{
+    position: relative;
+    margin-left:525px ;
+    text-align: center;
+    margin-top: 44px;
+    width: 800px;
+}
 /* 스토리보드 모달창 */
 .hidden{
     display: none;
@@ -417,17 +448,18 @@ section:last-child{
 }
 .box-modal{
     position: fixed;
-    width: 300px;
-    height: 300px;
+    z-index: 50;
+    width: 500px;
+    height: 500px;
+    margin-top: -250px;
+    margin-left: -250px;
     top: 50%;
     left: 50%;
     overflow-y: scroll;
     border: 1px solid #386980;
     visibility: collapse;
-    transform: translate(-50%,-50%);
     transition: all .2s ease;
-    opacity: .5;
-}
+    opacity: .5;}
 .box-modal:hover{
     opacity: 1;
 }
@@ -445,160 +477,4 @@ section:last-child{
 input#modal[type=checkbox]:checked ~ .box-modal{
     visibility: visible;
     transform: scale(1,1);
-}
-/* }
-.portfolio{
-    width: 100vw;
-    height: auto;}
-.Arcteryx-sign,
-.nonfiction-sign,
-.national-sign{
-    width: 100%;
-    height: 100vh;
-    position: relative;
-}
-.sign-circle{
-    position: absolute;
-    top:50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: 400px;
-    height: 400px;
-    border-radius: 50%;
-    background-image: radial-gradient(circle at center,#b4b3b3 40%,#fff);
-    filter:blur(120px);
-}
-.sign-circle2{
-    position: absolute;
-    top:50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: 400px;
-    height: 400px;
-    border-radius: 50%;
-    background-image: radial-gradient(circle at center,#5ea378 40%,#fff);
-    filter:blur(120px);
-}
-.sign-circle3{
-    position: absolute;
-    top:50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: 400px;
-    height: 400px;
-    border-radius: 50%;
-    background-image: radial-gradient(circle at center,#bdd3fd 40%,#fff);
-    filter:blur(120px);
-}
-.Arcteryx-sign>.portfolio-title,
-.nonfiction-sign>.portfolio-title,
-.national-sign>.portfolio-title{
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-}
-.portfolio-title>h1{
-    font-size: 75px;
-}
-.Arcteryx-sign>.introduce,
-.nonfiction-sign>.introduce,
-.national-sign>.introduce{
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: 90px;
-    text-align: center;}
-.number{
-    position: absolute;
-    top: 50%;
-    left: 25px;
-    text-align: center;
-    transform: rotate(-90deg);}
-.number>span{
-    font-size: 25px;
-    font-weight: 800;
-    color: #e188ad;
-}
-.portfolio>article{
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-.pc{
-    width: 100vw;
-    display: flex;
-    justify-content: center;}
-.nonfiction>.pc>div:first-child,
-.national>.pc>div:first-child{
-    flex: 2;
-}
-.pc>div:nth-child(2){
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-}
-.site-page{
-    display: flex;
-}
-.site-page>img:first-child{
-    width: 400px;
-}
-.mbsite-page>img{
-    width: 200px;
-}
-.mbsite-page>img:first-child{
-    margin-right: 30px;
-}
-.national .site-page>img{
-    width: 800px;
-}
-
-.site-circle{
-    width: 280px;
-    height: 280px;
-    border-radius: 50%;
-    position: absolute;
-    z-index: -1;
-    background-color:#5ea378 ;
-    filter: blur(130px);
-}
-.nat-circle{
-    width: 280px;
-    height: 280px;
-    border-radius: 50%;
-    position: absolute;
-    z-index: -1;
-    background-color:#aec8f6 ;
-    filter: blur(130px);
-}
-.pc-image{width: 750px;}
-.pc-image>img{width: 100%;}
-.mobile-image>img{width: 400px;}
-
-
-.portfolio>article #clickBtn{
-    padding: 10px 12px;
-    border: 1px solid red;
-    color: #000;} */
-
-
-
-
-.contact{position: relative;}
-.contact-circle{
-    width: 300px;
-    height: 300px;
-    border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    background-image: linear-gradient(135deg,#f94892 40%,#ff742f,#fff980);
-    filter: blur(130px);
 }
