--- a/style.css
+++ b/style.css
@@ -1,54 +1,214 @@
 *{margin: 0; padding: 0;}
 html,body{
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
+body{
+  background-color: #fef8d6;
+  font-family: 'Montserrat','Nanum Gothic', sans-serif;
+  overflow-x: hidden;
 }
 li{list-style: none;}
 a{text-decoration: none;}
 :root{
-    --color-pink:rgb(239, 87, 166);
-    --color-grey:#ccc;
+    --color-orange:#FFD495;
+    --color-peach:#FF9494;
+    --color-pink:#ffc4c4;
+    --color-gray:#aaa;
+    --color-purple:#f4c9ef;
 }
 @font-face {
   font-family: 'NY';
   src: url(./font/NewYork\ PERSONAL\ USE.otf);
 }
+header{
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  z-index: 100;
+}
 .tabs {
-    position: fixed;
-    top: 0;
-    right: 0;
     display: flex;
-    background-color: #fff;
-    z-index: 100;
+    background-color: rgba(255, 255, 255, 0.3);
     padding: 12px;
+    border-radius: 99px;
   }
 input[type=radio] {
     display: none;
   } 
 .tab{
-    border: 1px solid red;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 40px;
-    width: 180px;
+    height: 30px;
+    width: 160px;
     font-size: 20px;
-    border-radius: 20px; 
+    font-weight: 700;
     cursor: pointer;
+    color: var(--color-gray);
     transition: color 0.15s ease-in;
   }
 input[type=radio]:checked + label {
-    color: var(--color-pink);
+    color: var(--color-peach);
 }
 .home{
-    width: 100%;
-    height: 100vh;
-    border: 1px solid red;
-    position: relative;}
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;}
+.name{
+  width: 150px;
+  letter-spacing: 1px;
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+}
 .title{
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
-  font-size: 90px;
+}
+.title>h4{
+  letter-spacing: 1px;
+}
+.title>div{
+  font-size: 100px;
   font-family: 'NY';
+}
+.icon-scroll{
+  width: 30px;
+  height: 50px;
+  border: 2px solid var(--color-gray);
+  border-radius: 30px;
+  position: absolute;
+  left: 50%;
+  margin-left: -15px;
+  bottom: 40px;
+}
+.icon-scroll::before{
+  content: "";
+  display: block;
+  width: 4px;
+  height: 10px;
+  border-radius: 25%;
+  background-color: var(--color-gray);
+  position: absolute;
+  top: 5px;
+  left: 50%;
+  margin-left: -2px;
+  animation: scroll 2.2s infinite;
+}
+@keyframes scroll {
+  0% { opacity: 0; }
+  10% { transform: translateY(0); opacity: 1; }
+  100% { transform: translateY(12px); opacity: 0;}
+}
+.scroll>span{
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 12px;
+  color: var(--color-gray);
+  bottom: 20px;
+}
+.main-circle{
+  width: 350px;
+  height: 350px;
+  background: radial-gradient(#FF9494, #ffc4c4);
+  border-radius: 50%;
+  filter: blur(90px);
+  position: absolute;
+  top: 50%;
+  right: 30%;
+  transform: translateY(-50%);
+}
+.main-circle-top{
+  width: 600px;
+  height: 600px;
+  background-color: var(--color-pink);
+  border-radius: 50%;
+  position: absolute;
+  top: -250px;
+  left: -250px;
+  filter: blur(100px);
+}
+.main-circle-bottom{
+  width: 450px;
+  height: 450px;
+  border-radius: 50%;
+  background-color: var(--color-purple);
+  filter: blur(100px);
+  position: absolute;
+  bottom: -300px;
+  left: 30%;
+  opacity: .8;
+}
+.about{
+  width: 100%;
+  height: 720px;
+  position: relative;
+}
+.section-title{
+  margin-top: 40px;
+  margin-left: 40px;
+  font-size: 60px;
+  font-family: 'NY';
+}
+.about-wrap{
+  border: 1px solid red;
+  position: absolute;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 1100px;
+  display: flex;
+  align-items: center;
+}
+.profile{
+  display: flex;
+  flex-direction: column;
+}
+.profile>img{
+  width: 200px;
+}
+.profile>div{
+  text-align: center;
+}
+.about-list{
+  display: flex;
+  flex-wrap: wrap;
+}
+.about-list>li{
+  width: 50%;
+}
+.portfolio{
+  width: 100%;
+  height: 720px;
+  position: relative;
+}
+.portfolio>.number{
+  font-size: 45px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: -15px;
+  z-index: -1;
+}
+.portfolio-content{
+  width: 40%;
+  position: absolute;
+  bottom: 20px;
+  left: 40px;
+  border: 1px solid red;
+  text-align: right;
+}
+.mockup{
+  width: 800px;
+  height: 600px;
+  border: 1px solid red;
+  position: absolute;
+  right: 40px;
+  bottom: 20px;
 }
