--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html,body{
   -moz-box-sizing: border-box;
 }
 body{
-  background-color: #fef8d6;
+  background-color: #fdf9de;
   font-family: 'Montserrat','Nanum Gothic', sans-serif;
   overflow-x: hidden;
 }
@@ -150,45 +150,129 @@ input[type=radio]:checked + label {
   height: 720px;
   position: relative;
 }
+@keyframes about{
+  from{opacity: 0;}
+  to{opacity: 1;}
+}
+.bookmark{
+  width: 80px;
+  height: 180px;
+  background-color: var(--color-peach);
+  position: absolute;
+  top: 0;
+  left: 70px;
+}
 .section-title{
-  margin-top: 40px;
-  margin-left: 40px;
+  position: absolute;
+  top: 50px;
+  left: 50px;
   font-size: 60px;
   font-family: 'NY';
-}
-.about-wrap{
-  border: 1px solid red;
+  z-index: 10;}
+.about-circle{
+  width: 450px;
+  height: 450px;
+  border-radius: 50%;
+  background-color: var(--color-pink);
   position: absolute;
-  top:50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  width: 1100px;
-  display: flex;
-  align-items: center;
+  z-index: -1;
+  top: 50%;
+  transform:translateY(-50%);
+  right: -200px;
+  filter: blur(80px);
 }
 .profile{
-  display: flex;
-  flex-direction: column;
+  position: absolute;
+  top: 230px;
+  left: 70px;
 }
 .profile>img{
   width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background-color: rgba(212, 212, 212,.5);
 }
-.profile>div{
+.profile-contact{
+  margin-top: 25px;
   text-align: center;
 }
-.about-list{
-  display: flex;
-  flex-wrap: wrap;
+.profile-contact>h4{
+  margin-bottom: 8px;
+}
+.profile-contact>div{
+  margin-bottom: 6px;
+}
+.fa-quote-left{
+  position: absolute;
+  top: 130px;
+  left: 330px;
+  font-size: 40px;
+  color: var(--color-gray);
+  z-index: -1;
+}
+.about-me{
+  position: absolute;
+  top: 150px;
+  left: 350px;
+}
+.about-me>h2{
+  font-size: 25px;
+}
+.about-me>p{
+  padding-left: 7px;
+  font-size: 18px;
+}
+.about-contents{
+  position: absolute;
+  top: 300px;
+  left: 335px;
+}
+.about-list::before{
+  content: "";
+  display: block;
+  width: 1090px;
+  height: 1px;
+  background-color: var(--color-gray);
+  position: absolute;
+  top: 26px;
+  right: 34px;
 }
 .about-list>li{
-  width: 50%;
+  float: left;
+  margin-right: 45px;
 }
-.portfolio{
+.about-list>li>h3{
+  font-family: "NY";
+  font-size: 22px;
+  margin-bottom: 20px;
+  position: relative;
+}
+.about-list>li>h3::before{
+  content: "";
+  width: 105px;
+  height: 18px;
+  display: block;
+  background-color: var(--color-peach);
+  position: absolute;
+  z-index: -1;
+  bottom: 0;
+  left: 0;
+}
+.about-list>li>div{
+  margin-bottom: 15px;
+}
+.about-list>li>div>h4{
+  margin-bottom: 8px;
+}
+.skills>div>div{
+  margin-bottom: 8px;
+}
+article{
   width: 100%;
   height: 720px;
   position: relative;
 }
-.portfolio>.number{
+.portfolio .number{
   font-size: 45px;
   position: absolute;
   top: 50%;
@@ -196,6 +280,46 @@ input[type=radio]:checked + label {
   left: -15px;
   z-index: -1;
 }
+/* 스토리보드 모달창 */
+.hidden{
+  display: none;
+  visibility: hidden;}
+  .button{
+  vertical-align: middle;
+  cursor: pointer;
+  }
+  .box-modal{
+  position: fixed;
+  z-index: 50;
+  width: 500px;
+  height: 500px;
+  margin-top: -250px;
+  margin-left: -250px;
+  top: 50%;
+  left: 50%;
+  overflow-y: scroll;
+  border: 1px solid #386980;
+  visibility: collapse;
+  transition: all .2s ease;
+  opacity: .5;}
+  .box-modal:hover{
+  opacity: 1;
+  }
+  .closer{
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  top: 0;
+  right: 0;
+  text-align: center;
+  line-height: 30px;
+  font-size: 16px;
+  cursor: pointer;
+  }
+  input#modal[type=checkbox]:checked ~ .box-modal{
+  visibility: visible;
+  transform: scale(1,1);
+  }
 .portfolio-content{
   width: 40%;
   position: absolute;
@@ -204,6 +328,15 @@ input[type=radio]:checked + label {
   border: 1px solid red;
   text-align: right;
 }
+#clickBtn{
+  border: 1px solid #000;
+  padding: 8px 20px;
+  border-radius: 50%;
+  color: #000;
+}
+.introduce{
+  margin-top: 35px;
+}
 .mockup{
   width: 800px;
   height: 600px;
@@ -211,4 +344,22 @@ input[type=radio]:checked + label {
   position: absolute;
   right: 40px;
   bottom: 20px;
+}
+.contact{
+  width: 100%;
+  height: 400px;
+  background-color: #f4c9ef;
+  position: relative;
+}
+.go-top{
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 20px;
+  text-align: center;
+  cursor: pointer;
+}
+.go-top>.fa-arrow-up{
+  font-size: 17px;
+  margin-bottom: 4px;
 }
