--- a/style.css
+++ b/style.css
@@ -3,11 +3,12 @@ html,body{
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
+  overflow-x: hidden;
+  max-width: 100%;
 }
 body{
   background-color: #fdf9de;
   font-family: 'Montserrat','Nanum Gothic', sans-serif;
-  overflow-x: hidden;
 }
 li{list-style: none;}
 a{text-decoration: none;}
